Adding headers for proper compilation

--- a/parts/doctreeview/librarydocdlgbase.ui
+++ b/parts/doctreeview/librarydocdlgbase.ui
@@ -278,5 +278,9 @@
         <slot>reject()</slot>
     </connection>
 </connections>
+<includes>
+    <include location="global" impldecl="in implementation">klineedit.h</include>
+    <include location="global" impldecl="in implementation">kurlrequester.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
