--- a/parts/cppsupport/ccconfigwidgetbase.ui
+++ b/parts/cppsupport/ccconfigwidgetbase.ui
@@ -1375,5 +1375,8 @@
     <slot access="protected">slotSelectTemplateGroup( const QString &amp; )</slot>
     <slot access="protected">slotSetCHWindow( )</slot>
 </slots>
+<includes>
+<include location="global" impldecl="in implementation">kurlrequester.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
