--- a/parts/autoproject/addsubprojectdlgbase.ui
+++ b/parts/autoproject/addsubprojectdlgbase.ui
@@ -185,5 +185,8 @@
         </widget>
     </vbox>
 </widget>
+<includes>
+<include location="global" impldecl="in implementation">klineedit.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
